NotificationService-Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notificationservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notificationservice
  template:
    metadata:
      labels:
        app: notificationservice
    spec:
      containers:
      - name: notificationservice
        image: zakaria469980/taskservice-notificationservice:latest  # Gebruik de juiste naam van de image
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: notificationservice
spec:
  ports:
    - port: 5000
      targetPort: 8080
  selector:
    app: notificationservice
