UserService-Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: userservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: userservice
  template:
    metadata:
      labels:
        app: userservice
    spec:
      containers:
      - name: userservice
        image: zakaria469980/taskservice-userservice:latest  # Gebruik de juiste naam van de image
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: userservice
spec:
  ports:
    - port: 5000
      targetPort: 8080
  selector:
    app: userservice
