rabbitmq-Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq
spec:
  selector:
    app: rabbitmq
  ports:
    - name: amqp # Unieke naam voor de RabbitMQ protocolpoort
      protocol: TCP
      port: 5672
      targetPort: 5672
    - name: management # Unieke naam voor de Management UI-poort
      protocol: TCP
      port: 15672
      targetPort: 15672
  type: ClusterIP
